syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service MokaMessenger{
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc GetMessageStream (google.protobuf.Empty) returns (stream Message);
  rpc SendMessage(Message) returns (Message);
  rpc GetOfflineMessageStream (google.protobuf.Empty) returns (MessageArray);
  rpc CumulativeAck(MessageAck) returns (google.protobuf.Empty);
}
message MessageAck{
  google.protobuf.Timestamp TimeStamp = 1;
  AckType ackType = 2;
  string userId = 3;
}
enum AckType{
  Deliver = 0;
  Read = 1;
}
enum MessageType {
  Text = 0;
  Image = 1;
  Voice = 2;
  Document = 3;
}
message User{
  string id = 1;
  string username = 2;
  string nickname = 3;
}
message RegisterRequest{
  User user = 1;
  string password = 2;
}

message RegisterResponse{
  string id = 1;
}
message Message{
  string Id = 1;
  string localId = 2;
  string senderId = 3;
  string receiverId = 4;
  bytes payload = 5;
  MessageType type = 6;
  google.protobuf.Timestamp created_at_TimeStamp = 7;
  google.protobuf.Timestamp delivered_at_TimeStamp = 8;
  google.protobuf.Timestamp read_at_TimeStamp = 9;
}
message MessageArray{
  repeated Message messages = 1;
}