syntax = "proto3";
//package moka.kernel.user;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
service MokaUser{
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetUserInfo(User) returns (FindUserResult);
  rpc Encrypted(EncryptedMessage) returns(google.protobuf.Empty);
}
message EncryptedMessage{
  bytes data = 1;
  bytes meta = 2;

}
message Meta{
  map<string, string> map = 1;
}
message LoginRequest{
  string username = 1;
  string password = 2;
  string macAddress = 3;
}
message FindUserResult{
  bool IsFound = 1;
  User user = 2;
}
message LoginResponse{
  bool isSuccess = 1;
  User user = 2;
  string token = 3;
  string totp = 4;
  string salt = 5;
}
message User{
  string id = 1;
  string username = 2;
  string nickname = 3;
}
message RegisterRequest{
  User user = 1;
  string password = 2;
  string macAddress = 3;
}

message RegisterResponse{
  bool isSuccess = 1;
  //some errors maybe todo
  //  string id = 2;
}